# sentinel-aml

./: .gitignore  CODING_AGENTS.md  LICENSE  New Text Document.txt  README.md
agents/investigation/: .env.example  README.md  investigator.mermaid  langgraph.json  project.uiproj  pyproject.toml  run_local.py  uipath.json
agents/investigation-crewai/: .env.example  README.md  pyproject.toml  run_local.py  uipath.json
agents/investigation-crewai/src/: __init__.py  analysis.py  crew.py  data_access.py  models.py  runner.py
agents/investigation-crewai/src/data/: alerts.json  customers.json
agents/investigation-crewai/tests/: test_crew_contract.py
agents/investigation/src/: __init__.py  data_access.py  graph.py  llm.py  models.py  state.py
agents/narrative/: .env.example  README.md  langgraph.json  narrator.mermaid  project.uiproj  pyproject.toml  run_local.py  uipath.json
agents/narrative/src/: __init__.py  graph.py  models.py  narrative.py  state.py
agents/narrative/tests/: test_narrative.py
agents/qa/: qa-agent.md
agents/triage/: triage-agent.md
data/: alerts.json  customers.json  transactions.json  watchlists.json
docs/: agent-builder-setup.md  architecture.md  build-plan.md  deck-outline.md  demo-script.md  deploy-coded-agents.md  devpost-description.md  devpost-submission.md  feedback-notes.md  forum-use-case-post.md  maestro-case-setup.md
docs/deck/: Sentinel-Deck.pptx  Sentinel-Deck_..pptx  build_deck.js
docs/images/: README.md
docs/submission-evidence/: CODING_AGENTS.md  README.md
rpa/: README.md
(+9 files in other folders)
