[project]
name = "sentinel-investigator-crewai"
version = "0.1.0"
description = "Sentinel AML Investigator — CrewAI variant, deployed to UiPath as a coded agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "uipath>=2.0.0",
    "crewai>=0.80.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
