[project]
name = "sentinel-narrator"
version = "0.1.0"
description = "Sentinel SAR Narrator — LangGraph coded agent with Action Center HITL"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "uipath>=2.0.0",
    "uipath-langchain>=0.0.20",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
